--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "shipit": "git push origin main && npm run deploy"
   },
   "dependencies": {
     "lucide-react": "^0.562.0",
