--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://trustmeiamthedr.github.io/",
+  "homepage": "https://mgrdoc.com/",
   "name": "mukyo",
   "private": true,
   "version": "0.0.0",
